--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,6 @@
 {
-    "token": "YOUR_BOT_TOKEN",
-    "client_id": "YOUR_BOT_CLIENT_ID",
-    "genius_token": "YOUR_GENIUS_TOKEN",
-    "mongodb_url": "YOUR_MONGODB_URL",
-    "mongodb_name": "YOUR_MONGODB_DB_NAME",
+    "token": "MTQ2MTk2NTczODQ3Nzg3OTMzOQ.GIVz5G.y_ZRqbnmtbPPVupCZrQd1NCLrnY43rpaal3A_",
+    "client_id": "146196573847787933",
     "nodes": {
         "DEFAULT": {
             "host": "lavalink",
